# TFG

./: .gitignore  README.md  evolucion_proyecto.txt  log_evaluacion_completa.txt
tfg_rag_pruebas/: README.md  dataset_bot_test.csv  evolucion_proyecto.txt  pyproject.toml  rag_basico.py  resultados_evaluacion.csv  trazas_ejecucion.json
tfg_rag_pruebas/code/: chroma_db.py  dashboard_template.html  debug_rdf_loading.py  evaluador_requisitos.py  evaluate_rag.py  log_debug_ontologias.txt  log_evaluacion_completa.txt  rag_basico.py  run_advanced_benchmark.py  run_benchmark.py  run_evaluador.py  run_indexacion.py  run_rag_cli.py  test_db.py
tfg_rag_pruebas/dataset/: GISOntology4Renovation.owl  african_wildlife_ontology.owl  apco_2022-08-31.n3  base_ontology.owl  cbs_2018-05-02.n3  corrupto.ttl  dpv_2025-08-01.n3  dt.n3  edupro_2016-09-13.n3  ei2a_2021-10-21.n3  elec_2013-01-17.n3  fabio_2019-02-19.n3  frapo_2014-01-31.n3  ifc4.ttl  kgc_2023-02-01.n3  m4i_2025-03-10.n3  roh_2022-01-01.n3  s4city_2020-06-05.n3  saref4bldg.n3  saref4envi.n3  saref4watr.n3  sbim.owl  stg.ttl  vivo_2014-07-12.n3
tfg_rag_pruebas/dataset_noise_industry/: oum_2020-06-06.n3  s4agri_2020-06-05.n3  s4ehaw_2020-05-01.n3  s4inma_2019-04-30.n3  s4watr_2020-06-03.n3
tfg_rag_pruebas/gov_acad_dataset/: edu_2020-02-14.n3  eurio_2023-09-28.n3  istex_2018-12-17.n3  ocd_2013-05-02.n3
tfg_rag_pruebas/reportes_benchmarking/: dashboard_dificultad_easy_20260616_2049.html  dashboard_dificultad_hard_20260616_2122.html  dashboard_dificultad_medium_20260616_2112.html  dashboard_ontologia_bot.ttl_20260615_2344.html  dashboard_ontologia_gameontologyv3.owl_20260615_2327.html  dashboard_ontologia_odrl_2017-09-16.n3_20260615_2359.html  dashboard_ontologia_saref4watr.n3_20260616_0007.html  (+35 more)
(+24 files in other folders)
