[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology_rag_evaluator"
version = "0.1.0"
description = "Libreria modular para evaluacion RAG de ontologias"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-chroma",
    "langchain-core",
    "langchain-ollama",
    "langchain-huggingface",
    "langchain-community",
    "sentence-transformers",
    "pandas",
    "rdflib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
