[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology_rag_evaluator"
version = "0.1.0"
description = "Libreria modular para evaluacion RAG de ontologias"
readme = {text = "Libreria modular para evaluacion RAG de ontologias con Chroma, BM25 y Cross-Encoder.", content-type = "text/plain"}
requires-python = ">=3.10"
authors = [
    {name = "Wido", email = "wido@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-chroma",
    "langchain-core",
    "langchain-ollama",
    "langchain-huggingface",
    "langchain-community",
    "sentence-transformers",
    "pandas",
    "rdflib",
]

[project.scripts]
ontology-rag = "ontology_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

